--- a/src/components/header/header.astro
+++ b/src/components/header/header.astro
@@ -1,12 +1,12 @@
+---
+import HamburgerIcon from "./hamburger-icon.astro";
+---
+
 <header class="relative">
   <div class="w-full flex items-end justify-end">
     <!-- svg menu icon -->
      <button class="mr-10 mt-10 text-white">
-      <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-menu" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.0" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
-        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-        <path d="M4 8l16 0" />
-        <path d="M4 16l16 0" />
-      </svg>
+      <HamburgerIcon />
      </button>
   </div>
 </header>
