--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,14 +1,20 @@
 ---
+import ArrowButton from '../components/arrow-button.astro';
+import Experience from '../components/experience/experience.astro';
 import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout title="Portfolio">
-	<main class="flex flex-col text-white gap-y-10">
+	<main class="flex flex-col text-white w-full">
 		<!-- container primera vista del usuario  -->
-		<div class="h-[90vh] flex flex-col items-center justify-center ">
+		<div class="h-[100vh] flex flex-col items-center justify-center ">
 			<h1 class="text-2xl" id="typewriter">Full Stack Developer</h1>
 			<h2 class="roboto-regular text-8xl">David Arroyo</h2>
+		  <ArrowButton />
 		</div>
+
+    <!-- experiencias -->
+     <Experience />
 	</main>
 
 </Layout>
