añadido carrusel de habilidades

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import ArrowButton from '../components/arrow-button.astro';
 import Experience from '../components/experience/experience.astro';
+import Skills from '../components/skills/skills.astro';
 import Layout from '../layouts/Layout.astro';
 ---
 
@@ -15,6 +16,7 @@ import Layout from '../layouts/Layout.astro';
 
     <!-- experiencias -->
      <Experience />
+     <Skills />
 	</main>
 
 </Layout>
