añadido enums tags

--- a/src/components/arrow-button.astro
+++ b/src/components/arrow-button.astro
@@ -1,13 +1,14 @@
 ---
 
 ---
-<a class="flex items-center justify-center w-full container-arrow scroll-to" href="#cards">
+<a name="go-down" class="flex items-center justify-center w-full container-arrow scroll-to" href="#experience">
   <!-- svg flecha apuntado abajo -->
-  <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-down bounce" width="52" height="52" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
+  <svg  xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-down bounce" width="52" height="52" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
     <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
     <path d="M12 5v14" />
     <path d="M18 13l-6 6" />
     <path d="M6 13l6 6" />
+    <title>go-down</title>
   </svg>
 </a>
 
