--- a/src/components/experience/experience.astro
+++ b/src/components/experience/experience.astro
@@ -3,7 +3,7 @@ import ExperienceCard from "./experience-card.astro";
 import Bag from "../../../public/icons/bag.astro"
 ---
 
-<div id="container" class="w-full">
+<div #experience id="experience" class="w-full">
   <div class="mt-[20vh] mx-96 px-4 ">
     <!-- bloque experiencia con svg -->
     <div class="flex w-fit items-center justify-center  gap-x-3">
