--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import Github from '../../public/icons/github.astro';
 import Linkedin from '../../public/icons/linkedin.astro';
 import ArrowButton from '../components/arrow-button.astro';
 import Experience from '../components/experience/experience.astro';
-import Proyects from '../components/proyects/proyects.astro';
+import Proyects from '../components/proyects/projects.astro';
 import Skills from '../components/skills/skills.astro';
 import Layout from '../layouts/Layout.astro';
 ---
@@ -16,10 +16,10 @@ import Layout from '../layouts/Layout.astro';
 			<h2 class="roboto-regular text-8xl">David Arroyo</h2>
       <!-- icons -->
       <div class="icons-container mt-8 flex items-center justify-center gap-x-4">
-         <a href="https://github.com/pridato" target="_blank">
+         <a name="github" href="https://github.com/pridato" target="_blank">
           <Github />
          </a>
-         <a href="https://www.linkedin.com/in/david-arroyo234/" target="_blank">
+         <a name="linkedin" href="https://www.linkedin.com/in/david-arroyo234/" target="_blank">
           <Linkedin />
          </a>
         
