--- a/src/components/proyects/projects.astro
+++ b/src/components/proyects/projects.astro
@@ -1,6 +1,6 @@
 ---
 import { projects } from "../../utils/globales"
-import ProjectCard from "./project-card.astro"
+import ProjectCard from "./project-card"
 ---
 <div class="flex flex-col gap-y-4 mx-96 my-10">
   <!-- titulo -->
