proyectos pendiente imagen

--- a/src/components/proyects/projects.astro
+++ b/src/components/proyects/projects.astro
@@ -16,7 +16,7 @@ import ProjectCard from "./project-card"
   </div>
 
   <!-- container de los cards -->
-  <div class="flex flex-col items-center justify-center gap-y-5">
+  <div class="flex flex-col items-center justify-center gap-y-10 mt-5">
     {
       projects.map(
         project => (
