--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import Skills from '../components/skills/skills.astro';
 import Layout from '../layouts/Layout.astro';
 ---
 
-<Layout title="Portfolio">
+<Layout title="David Arroyo - Portfolio">
 	<main class="flex flex-col gap-y-10 text-white w-full">
 		<!-- container primera vista del usuario  -->
 		<div class="h-[100vh] flex flex-col items-center justify-center ">
