--- a/src/components/proyects/projects.astro
+++ b/src/components/proyects/projects.astro
@@ -2,9 +2,9 @@
 import { projects } from "../../utils/globales"
 import ProjectCard from "./project-card"
 ---
-<div class="flex flex-col gap-y-4 mx-96 my-10">
+<div id="projects" class="flex flex-col gap-y-4 mx-96 my-10">
   <!-- titulo -->
-  <div class="skills-container flex gap-x-2 ml-3 w-fit justify-center items-center">
+  <div  class="skills-container flex gap-x-2 ml-3 w-fit justify-center items-center">
     <!-- img proyects -->
     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-source-code" width="52" height="52" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
       <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
