--- a/src/components/skills/skills.astro
+++ b/src/components/skills/skills.astro
@@ -3,16 +3,16 @@ import InfiniteLoopSlider from "./InfiniteLoopSlider";
 
 
 ---
-<div class="flex flex-col gap-y-4 mx-96 my-10 mt-14">
+<div id="skills" class="flex flex-col gap-y-4 mx-96 my-10 mt-14">
   <div class="skills-container flex gap-x-2 ml-3 w-fit justify-center items-center">
     <!-- img skills -->
-    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-bulb" width="52" height="52" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
+    <svg  xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-bulb" width="52" height="52" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
       <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
       <path d="M3 12h1m8 -9v1m8 8h1m-15.4 -6.4l.7 .7m12.1 -.7l-.7 .7" />
       <path d="M9 16a5 5 0 1 1 6 0a3.5 3.5 0 0 0 -1 3a2 2 0 0 1 -4 0a3.5 3.5 0 0 0 -1 -3" />
       <path d="M9.7 17l4.6 0" />
     </svg>
-    <h1 class="text-3xl onest">Mis habilidades </h1>
+    <h1  class="text-3xl onest">Mis habilidades </h1>
   </div>
   <InfiniteLoopSlider />
 </div>
