--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import Header from "../components/header/header.astro";
 import Github from '../../public/icons/github.astro';
 import Linkedin from '../../public/icons/linkedin.astro';
 import ArrowButton from '../components/arrow-button.astro';
@@ -9,6 +10,7 @@ import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout title="David Arroyo - Portfolio">
+  <Header />
 	<main class="flex flex-col gap-y-10 text-white w-full">
 		<!-- container primera vista del usuario  -->
 		<div class="h-[100vh] flex flex-col items-center justify-center ">
