--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import Layout from '../layouts/Layout.astro';
   <Header />
 	<main class="flex flex-col gap-y-10 text-white w-full">
 		<!-- container primera vista del usuario  -->
-		<div class="h-[100vh] flex flex-col items-center justify-center ">
+		<div id="index" class="h-[100vh] flex flex-col items-center justify-center ">
 			<h1 class="text-2xl" id="typewriter">Full Stack Developer</h1>
 			<h2 class="roboto-regular text-8xl">David Arroyo</h2>
       <!-- icons -->
