imagenes por proyecto

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,7 @@ import Experience from '../components/experience/experience.astro';
 import Proyects from '../components/proyects/projects.astro';
 import Skills from '../components/skills/skills.astro';
 import Layout from '../layouts/Layout.astro';
+import Contact from "../components/contact/contact.astro";
 ---
 
 <Layout title="David Arroyo - Portfolio">
@@ -33,6 +34,7 @@ import Layout from '../layouts/Layout.astro';
      <Experience />
      <Proyects />
      <Skills />
+     <Contact />
 	</main>
 
 </Layout>
