--- a/src/components/contact/contact.astro
+++ b/src/components/contact/contact.astro
@@ -1,9 +1,10 @@
 ---
 
 ---
-<div id="contact" class="flex flex-col gap-y-4 mx-96 my-10 mt-14">
+<div id="contact" class="flex flex-col gap-y-4 mx-96 mb-20 mt-10">
+  <!-- container titulo  -->
   <div class="skills-container flex gap-x-2 ml-3 w-fit justify-center items-center">
-    <!-- img skills -->
+    <!-- img sobre mi svg -->
     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-user-code" width="52" height="52" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
       <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
       <path d="M8 7a4 4 0 1 0 8 0a4 4 0 0 0 -8 0" />
@@ -12,5 +13,17 @@
       <path d="M17 17l-2 2l2 2" />
     </svg>
     <h1 class="text-3xl onest">Sobre mi </h1>
+  </div>
+
+  <div class="about-me-text mt-5 ml-3 text-white leading-relaxed font-mono">
+    <p class="mb-4">
+      Puede que no tenga mucha experiencia laboral, pero compenso eso con <span class="font-semibold text-yellow-300">dedicación, esfuerzo y disciplina</span>. Disfruto sumergiéndome en diferentes temas hasta entenderlos completamente, lo cual me ayuda a resolver problemas de manera efectiva.
+    </p>
+    <p class="mb-4">
+      Como desarrollador, siempre estoy buscando maneras de <span class="font-semibold text-yellow-300">mejorar y aprender nuevas tecnologías</span>. Mi objetivo es aplicar mis conocimientos para crear soluciones eficientes y de calidad.
+    </p>
+    <p class="mb-4">
+      Mi enfoque está en el <span class="font-semibold text-yellow-300">desarrollo continuo</span> y en la <span class="font-semibold text-yellow-300">colaboración</span> con equipos multidisciplinarios para alcanzar resultados óptimos.
+    </p>
   </div>
 </div>
