arreglado centrado experiencia laboral

--- a/src/components/proyects/projects.astro
+++ b/src/components/proyects/projects.astro
@@ -2,7 +2,7 @@
 import { projects } from "../../utils/globales"
 import ProjectCard from "./project-card"
 ---
-<div id="projects" class="flex flex-col gap-y-4 mx-96 my-10">
+<div id="projects" class="flex flex-col gap-y-4 px-14 mb-20  md:mx-20 lg:mx-56 xl:mx-96 lg:px-0">
   <!-- titulo -->
   <div  class="skills-container flex gap-x-2 ml-3 w-fit justify-center items-center">
     <!-- img proyects -->
