--- a/src/components/contact/contact.astro
+++ b/src/components/contact/contact.astro
@@ -1,9 +1,9 @@
 ---
 
 ---
-<div id="contact" class="flex flex-col gap-y-4 mx-96 mb-20 mt-10">
+<div id="contact" class="flex flex-col gap-y-4 px-14 mb-20  md:mx-20 lg:mx-56 xl:mx-96 lg:px-0">
   <!-- container titulo  -->
-  <div class="skills-container flex gap-x-2 ml-3 w-fit justify-center items-center">
+  <div class="skills-container flex gap-x-2 justify-start items-start ml-4">
     <!-- img sobre mi svg -->
     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-user-code" width="52" height="52" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
       <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
@@ -12,10 +12,10 @@
       <path d="M20 21l2 -2l-2 -2" />
       <path d="M17 17l-2 2l2 2" />
     </svg>
-    <h1 class="text-3xl onest">Sobre mi </h1>
+    <h1 class="text-3xl onest ">Sobre mi</h1>
   </div>
 
-  <div class="about-me-text mt-5 ml-3 text-white leading-relaxed font-mono">
+  <div class="about-me-text mt-5 text-white leading-relaxed font-mono ml-8">
     <p class="mb-4">
       Puede que no tenga mucha experiencia laboral, pero compenso eso con <span class="font-semibold text-yellow-300">dedicación, esfuerzo y disciplina</span>. Disfruto sumergiéndome en diferentes temas hasta entenderlos completamente, lo cual me ayuda a resolver problemas de manera efectiva.
     </p>
