--- a/src/components/experience/experience.astro
+++ b/src/components/experience/experience.astro
@@ -3,25 +3,23 @@ import ExperienceCard from "./experience-card.astro";
 import Bag from "../../../public/icons/bag.astro"
 ---
 
-<div #experience id="experience" class="w-full">
-  <div class="mt-[20vh] mx-96 px-4 ">
-    <!-- bloque experiencia con svg -->
-    <div class="flex w-fit items-center justify-center  gap-x-3">
-      <Bag />
-      <h1 class="text-3xl onest">Experiencia laboral</h1>
-    </div>
-
-    <!-- experiencias -->
-     <div class="ml-20 mt-10">
-      <ExperienceCard
-          startDate="Marzo 2024"
-          endDate="Junio 2024"
-          title="Full Stack · Gahn LGC"
-          description="Desarrollo de dos aplicaciones web, una para la gestión de vacaciones y otra para la gestión de todo el inventario de la empresa."
-          skills={["Angular", "Spring boot", "Sql Server"]}
-        />
-     </div>
+<div #experience id="experience" class="flex flex-col gap-y-4 px-14 mb-20 mt-10 md:mx-20 lg:mx-56 xl:mx-96 lg:px-0">
+  <!-- bloque experiencia con svg -->
+  <div class="flex w-fit items-center justify-center  gap-x-3">
+    <Bag />
+    <h1 class="text-3xl onest">Experiencia laboral</h1>
   </div>
+
+  <!-- experiencias -->
+    <div class="flex justify-center items-center mt-10">
+    <ExperienceCard
+        startDate="Marzo 2024"
+        endDate="Junio 2024"
+        title="Full Stack · Gahn LGC"
+        description="Desarrollo de dos aplicaciones web, una para la gestión de vacaciones y otra para la gestión de todo el inventario de la empresa."
+        skills={["Angular", "Spring boot", "Sql Server"]}
+      />
+    </div>
 </div>
 <style is:global>
   .onest {
