--- a/src/components/header/header.astro
+++ b/src/components/header/header.astro
@@ -28,8 +28,9 @@
       <li><a href="#projects" class="text-white text-lg hover:text-purple-400 transition">Projects</a></li>
       <li><a href="#skills" class="text-white text-lg hover:text-purple-400 transition">Skills</a></li>
       <li><a href="#contact" class="text-white text-lg hover:text-purple-400 transition">Contact</a></li>
+      <!-- boton descarga de curriculum -->
       <li>
-        <a href="/public/utils/curriculum-english.pdf" download class="bg-purple-600 text-white px-4 py-2 rounded-lg hover:bg-purple-500 transition flex gap-x-2 items-center justify-center">
+        <a href="/utils/curriculum-english.pdf" download class="bg-purple-600 text-white px-2 py-1  lg:px-4 lg:py-2 rounded-lg hover:bg-purple-500 transition flex gap-x-2 items-center justify-center">
           <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-download" width="20" height="20" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
             <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
             <path d="M4 17v2a2 2 0 0 0 2 2h12a2 2 0 0 0 2 -2v-2" />
