todo en español, pendioente traduccion

--- a/src/components/header/header.astro
+++ b/src/components/header/header.astro
@@ -24,10 +24,10 @@
     </a>
 
     <ul class="flex items-center justify-center gap-8">
-      <li><a href="#experience" class="text-white text-lg hover:text-purple-400 transition">Experience</a></li>
-      <li><a href="#projects" class="text-white text-lg hover:text-purple-400 transition">Projects</a></li>
-      <li><a href="#skills" class="text-white text-lg hover:text-purple-400 transition">Skills</a></li>
-      <li><a href="#contact" class="text-white text-lg hover:text-purple-400 transition">Contact</a></li>
+      <li><a href="#experience" class="text-white text-lg hover:text-purple-400 transition">Experiencia</a></li>
+      <li><a href="#projects" class="text-white text-lg hover:text-purple-400 transition">Proyectos</a></li>
+      <li><a href="#skills" class="text-white text-lg hover:text-purple-400 transition">Habilidades</a></li>
+      <li><a href="#contact" class="text-white text-lg hover:text-purple-400 transition">Contacto</a></li>
       <!-- boton descarga de curriculum -->
       <li>
         <a href="/utils/curriculum-english.pdf" download class="bg-purple-600 text-white px-2 py-1  lg:px-4 lg:py-2 rounded-lg hover:bg-purple-500 transition flex gap-x-2 items-center justify-center">
@@ -37,7 +37,7 @@
             <path d="M7 11l5 5l5 -5" />
             <path d="M12 4l0 12" />
           </svg>
-          <span id="text-download">Download CV</span>
+          <span id="text-download">Descargar CV</span>
         </a>
       </li>
     </ul>
