--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -63,4 +63,4 @@ import Contact from "../components/contact/contact.astro";
   }
 </style>
 
-<script type="module" src="/src/utils/typewriter.js"></script>
+<script is:inline type="module" src="/src/utils/typewriter.js"></script>
