--- a/src/components/proyects/projects.astro
+++ b/src/components/proyects/projects.astro
@@ -1,4 +1,5 @@
 ---
+import type { Project } from "../../models/project"
 import { projects } from "../../utils/globales"
 import ProjectCard from "./project-card"
 ---
@@ -19,7 +20,7 @@ import ProjectCard from "./project-card"
   <div class="flex flex-col items-center justify-center gap-y-10 mt-5">
     {
       projects.map(
-        project => (
+        (project: Project) => (
           <ProjectCard {...project} />
         )
       )
